bug fixes - first_pt_count not showing
improvements
- pt stats to show the stats of each status for dosutype_stats and
  worker_stats
- display properly worker stats list

--- a/scheduler/static/styles.css
+++ b/scheduler/static/styles.css
@@ -1,5 +1,9 @@
 html {
-  font-size: clamp(1rem, 1vw, 2rem); /* Base font size scales with viewport */
+  font-size: clamp(
+    16px,
+    1vw,
+    18px
+  ); /* Base font size scales with viewport (min, vw %, max) */
 }
 
 @media (max-width: 768px) {
