--- a/scheduler/static/styles_monthly_dark.css
+++ b/scheduler/static/styles_monthly_dark.css
@@ -66,7 +66,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .calendar {
